# discern

./: .readthedocs.yml  Dockerfile  parameters.json  pyproject.toml
discern/: __main__.py  functions.py  io.py  preprocessing.py
discern/estimators/: batch_integration.py  callbacks.py  losses.py  run_exp.py  utilities_wae.py
doc/source/: api.rst
tests/: conftest.py  test_full_model.py  test_io.py  test_main.py  test_preprocessing.py
tests/estimators/: test_batch_integration.py  test_callbacks.py  test_customlayer.py  test_losses.py  test_run_exp.py  test_utilities_wae.json  test_utilities_wae.py
tutorials/: Tutorial.ipynb
