[tool.poetry]
name = "discern-reconstruction"
packages=[{include = "discern"}]
version = "0.1.1"
description = "Wasserstein Auto-Encoder for expression reconstruction"
license= "MIT"
readme = "README.rst"
homepage = "https://discern.readthedocs.io/en/latest/quickinfo.html"
repository = "https://github.com/imsb-uke/discern"
authors = [
"Fabian Hausmann <fabian.hausmann@zmnh.uni-hamburg.de>",
"Can Ergen <can.ergen@zmnh.uni-hamburg.de>",
"Pierre Machart <pierre.machart@zmnh.uni-hamburg.de>",
]

build = "build.py"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
ray = {extras = ["default", "tune"], version = ">=1.6.0,<1.7.0", optional = true}
hyperopt = {version = "^0.2.3", optional = true}
Cython = "^0.29.16"
scikit-learn = "^0.24.0"
ipykernel = {version = "^5.5.0", optional = true}
joblib = "^1.0.1"
click = "^8.1.3"
tensorflow = "^2.13.0"
scanpy = "^1.9.1"
anndata = "^0.8.0"
numpy = ">=1.20,<1.24"
numba = ">=0.53.0,<0.54.0"

[tool.poetry.extras]
jupyter = ["ipykernel"]
tune = ["ray", "hyperopt"]

[tool.poetry.scripts]
merge_parameter = "discern._scripts.merge_parameters:main"
discern =  "discern.__main__:main"

[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
rstcheck = "^6.1.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ray = {extras = ["debug"], version = ">=1.6.0,<1.7.0"}
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
yapf = "^0.32.0"
pydocstyle = "^6.3.0"
pytest-rerunfailures = "^11.0"
rope = "^1.7.0"
vulture = "^2.7"
rstcheck = "^6.1.1"
mypy = "^1.0.0"
pylint = "^2.16.1"
nbsmoke = "^0.6.0"

[tool.pylint.messages_control]
disable = ["import-error","unexpected-keyword-arg","no-value-for-parameter"]
[build-system]
requires = ["poetry_core>=1.0.0","Cython", "numpy","setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
make_whitelist = false
min_confidence = 80
ignore_names = ["unused_*"]
paths = ["discern", "ray_hyperpara.py", ".vulture_whitelist.py"]
sort_by_size = true
verbose = false

[tool.mypy]
python_version = "3.7"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_site_packages = true
